[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/UI/Inventory/characters/ninten.png" type="Texture" id=1]
[ext_resource path="res://Graphics/UI/Inventory/modifiers.png" type="Texture" id=2]
[ext_resource path="res://Nodes/Ui/Inventory/portrait.gd" type="Script" id=3]
[ext_resource path="res://Graphics/UI/Inventory/modifiers2.png" type="Texture" id=4]
[ext_resource path="res://Shaders/MenuFlavors.tres" type="Material" id=5]

[node name="Ninten" type="TextureRect"]
material = ExtResource( 5 )
margin_right = 21.0
margin_bottom = 27.0
rect_min_size = Vector2( 21, 21 )
texture = ExtResource( 1 )
stretch_mode = 4
script = ExtResource( 3 )

[node name="Indicators" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -0.5
margin_right = -0.5

[node name="is_item_suitable" type="Sprite" parent="Indicators"]
visible = false
position = Vector2( -6.5, 21 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 10, 13, 7 )

[node name="is_item_better" type="Sprite" parent="Indicators/is_item_suitable"]
visible = false
position = Vector2( 1, -20 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 11, 7 )

[node name="is_item_lower" type="Sprite" parent="Indicators/is_item_suitable"]
visible = false
position = Vector2( 1, -20 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 7, 11, 7 )

[node name="is_item_equiped" type="Sprite" parent="Indicators"]
visible = false
position = Vector2( -4.5, 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 15, 10, 9, 7 )
